--- a/frontend/src/Components/Users/UserInfo.css
+++ b/frontend/src/Components/Users/UserInfo.css
@@ -93,7 +93,7 @@
     font-size: 14px;
     font-weight: bold;
     color: #fff;
-    background-color:#6D4E72; /* Azul */
+    background-color:#6D4E72; 
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -126,7 +126,7 @@
     font-size: 14px;
     font-weight: bold;
     color: #fff;
-    background-color:#6D4E72; /* Azul */
+    background-color:#6D4E72; 
     border: none;
     border-radius: 5px;
     cursor: pointer;
