--- a/frontend/src/Components/Users/PrivateMessages.css
+++ b/frontend/src/Components/Users/PrivateMessages.css
@@ -30,44 +30,44 @@
 }
 
 .pm-message {
-  padding: 5px 0; /* Reduce el espacio entre mensajes */
+  padding: 5px 0; 
   font-size: 0.9rem;
 }
 
 .pm-message-header {
   display: flex;
   align-items: center;
-  gap: 8px; /* Espaciado entre elementos */
-  font-size: 1rem; /* Tamaño del texto del encabezado */
+  gap: 8px; 
+  font-size: 1rem; 
   color: rgba(255, 255, 255, 0.7);
-  border-bottom: 1px solid rgba(200, 200, 200, 0.2); /* Línea divisoria tenue */
-  padding-bottom: 5px; /* Espaciado inferior */
-  margin-bottom: 5px; /* Separación con el mensaje */
+  border-bottom: 1px solid rgba(200, 200, 200, 0.2); 
+  padding-bottom: 5px; 
+  margin-bottom: 5px; 
 }
 
 .pm-message-header img.sender-image {
   width: 20px;
   height: 20px;
-  border-radius: 50%; /* Imagen circular */
+  border-radius: 50%; 
   object-fit: cover;
 }
 
 .pm-message-header .sender-name {
   font-weight: bold;
   color: #fff;
-  font-size: 1.1rem; /* Más grande que el texto normal */
+  font-size: 1.1rem; 
 }
 
 .pm-message-header .message-time {
   font-size: 0.8rem;
-  color: rgba(255, 255, 255, 0.5); /* Texto más tenue */
+  color: rgba(255, 255, 255, 0.5); 
 }
 
 .pm-message-text {
   font-size: 1rem;
   color: #fff;
   word-wrap: break-word;
-  margin-left: 30px; /* Alinear el texto después de la imagen */
+  margin-left: 30px; 
 }
 
 .pm-new-message-form {
