--- a/frontend/src/Components/Users/Users.css
+++ b/frontend/src/Components/Users/Users.css
@@ -1,4 +1,3 @@
-/* Estilo base */
 body {
     font-family: Arial, sans-serif;
     background-color: #f6f6f6;
@@ -6,7 +5,7 @@ body {
     padding: 0;
   }
   
-  /* Contenedor principal */
+  
   .auth-screen-container,
   .register-container,
   .login-container {
@@ -19,10 +18,10 @@ body {
     padding: 20px;
   }
   
-  /* Encabezado */
+  
   .auth-header,
   .login-header {
-    background-color: #4a154b; /* Color principal de Slack */
+    background-color: #4a154b; 
     color: white;
     padding: 20px;
     text-align: center;
@@ -35,7 +34,7 @@ body {
     font-weight: bold;
   }
   
-  /* Formularios */
+  /* formularios */
   .auth-form,
   .register-form,
   .login-form {
@@ -70,7 +69,7 @@ body {
     box-shadow: 0 0 4px rgba(74, 21, 75, 0.3);
   }
   
-  /* Botones */
+  /* botones */
   .auth-form button,
   .register-form button,
   .login-form button {
@@ -91,7 +90,7 @@ body {
     background-color: #7b1d7d;
   }
   
-  /* Enlaces */
+  
   .auth-form a,
   .register-link,
   .login-form a {
@@ -109,7 +108,7 @@ body {
     text-decoration: underline;
   }
   
-  /* Mensajes de error o confirmación */
+  /* mensajes */
   .error-message {
     font-size: 14px;
     color: red;
