--- a/frontend/src/Components/Users/Users.css
+++ b/frontend/src/Components/Users/Users.css
@@ -9,7 +9,7 @@ body {
   .auth-screen-container,
   .register-container,
   .login-container {
-    max-width: 400px;
+    width: 400px;
     margin: 50px auto;
     background-color: #ffffff;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -20,7 +20,8 @@ body {
   
   
   .auth-header,
-  .login-header {
+  .login-header,
+  .recovery-header {
     background-color: #4a154b; 
     color: white;
     padding: 20px;
@@ -37,13 +38,15 @@ body {
   /* formularios */
   .auth-form,
   .register-form,
-  .login-form {
+  .login-form,
+  .recovery_form {
     padding: 20px;
   }
   
   .auth-form label,
   .register-form label,
-  .login-form label {
+  .login-form label,
+  .recovery_form label {
     display: block;
     margin-bottom: 5px;
     font-size: 14px;
@@ -52,7 +55,8 @@ body {
   
   .auth-form input,
   .register-form input,
-  .login-form input {
+  .login-form input, 
+  .recovery_form input {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
@@ -63,7 +67,8 @@ body {
   
   .auth-form input:focus,
   .register-form input:focus,
-  .login-form input:focus {
+  .login-form input:focus,
+  .recovery_form input:focus {
     outline: none;
     border-color: #4a154b;
     box-shadow: 0 0 4px rgba(74, 21, 75, 0.3);
@@ -72,7 +77,8 @@ body {
   /* botones */
   .auth-form button,
   .register-form button,
-  .login-form button {
+  .login-form button,
+  .recovery_form button {
     width: 100%;
     background-color: #4a154b;
     color: white;
@@ -86,14 +92,16 @@ body {
   
   .auth-form button:hover,
   .register-form button:hover,
-  .login-form button:hover {
+  .login-form button:hover,
+  .recovery_form button:hover {
     background-color: #7b1d7d;
   }
   
   
   .auth-form a,
   .register-link,
-  .login-form a {
+  .login-form a,
+  .recovery_form a {
     display: block;
     text-align: center;
     margin-top: 10px;
@@ -104,16 +112,17 @@ body {
   
   .auth-form a:hover,
   .register-link:hover,
-  .login-form a:hover {
+  .login-form a:hover,
+  .recovery_form a:hover {
     text-decoration: underline;
   }
   
   /* mensajes */
-  .error-message {
-    font-size: 14px;
+  .login-form .error-message {
     color: red;
-    margin-bottom: 10px;
-    text-align: center;
+    font-size: 0.9rem;
+    margin: 5px;
+    
   }
   
   .message {
