--- a/frontend/src/Components/Chanels/Help/Help.css
+++ b/frontend/src/Components/Chanels/Help/Help.css
@@ -1,32 +1,47 @@
-body {
+.help {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    margin: 0;
-    padding: 0 20px;
-    background-color: #f9f9f9;
+    margin: 20px;
+    background-color: #f4f4f4;
     color: #333;
 }
-h1, h2, h3 {
-    color: #444;
+
+.help .close {
+    background: transparent;
+    font-size: 24px;
+    cursor: pointer;
+    color: #333;
+    text-align: end;
+  }
+  
+.help .close:hover {
+    color: #ff0000;
+  }
+
+.help h1 h2 {
+    color: #333;
 }
-pre {
+.help ul {
+    list-style-type: disc;
+    margin-left: 20px;
+}
+.help pre {
     background-color: #eee;
     padding: 10px;
-    border-radius: 5px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
     overflow-x: auto;
 }
-code {
-    font-family: monospace;
-    color: #333;
+.help code {
+    background-color: #f4f4f4;
+    padding: 2px 4px;
+    border-radius: 4px;
+    font-size: 90%;
 }
-ul {
-    margin: 0;
-    padding-left: 20px;
-}
-a {
-    color: #0066cc;
+.help a {
+    color: #007bff;
     text-decoration: none;
 }
-a:hover {
+.help a:hover {
     text-decoration: underline;
 }
