--- a/frontend/src/Components/Workspaces/WorkspacesList/WorkspacesList.css
+++ b/frontend/src/Components/Workspaces/WorkspacesList/WorkspacesList.css
@@ -16,12 +16,10 @@
     height: 60px;
     padding: 0 24px;
     display: flex;
-
   }
 
-
-  
-  .workspace-list .title h4  {
+ 
+  .workspace-list h4  {
     font-size: 18px;
     font-weight: 300;
     letter-spacing: var(--custom-font-tracking-body, inherit);
