--- a/frontend/src/Components/Workspaces/WorkspacesList/WorkspacesList.css
+++ b/frontend/src/Components/Workspaces/WorkspacesList/WorkspacesList.css
@@ -19,9 +19,10 @@
   }
 
  
-  .workspace-list h4  {
+  .workspace-list .title .workspace-list-header h4  {
     font-size: 18px;
     font-weight: 300;
+    color: aqua;
     letter-spacing: var(--custom-font-tracking-body, inherit);
 }
 
