--- a/frontend/src/Components/Workspaces/WorkspacesList/WorkspacesList.css
+++ b/frontend/src/Components/Workspaces/WorkspacesList/WorkspacesList.css
@@ -17,13 +17,19 @@
     padding: 0 24px;
     display: flex;
   }
+  .workspace-list-header{
 
- 
-  .workspace-list h4  {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: initial;
     letter-spacing: var(--custom-font-tracking-body, inherit);
     margin: 1.33em;
+
+  }
+ 
+  .workspace-list .title h4  {
+    font-size: 18px;
+    font-weight: initial;
+    letter-spacing: var(--custom-font-tracking-body, inherit);
 }
 
   .workspace-list .workspace {
