--- a/frontend/src/Components/Workspaces/WorkspacesList/WorkspacesList.css
+++ b/frontend/src/Components/Workspaces/WorkspacesList/WorkspacesList.css
@@ -17,7 +17,7 @@
     padding: 0 24px;
     display: flex;
   }
-  .workspace-list-header h4{
+  .workspace-list-header {
     font-size: 15px;
     font-weight: initial;
     letter-spacing: var(--custom-font-tracking-body, inherit);
