--- a/frontend/src/Components/Chanels/Chanels/Chanels.css
+++ b/frontend/src/Components/Chanels/Chanels/Chanels.css
@@ -35,7 +35,9 @@
 .channel .container-none {
     display: none
 }
-
+.loading {
+    color: #ccc;
+}
 .channel .messages .message {
     color: #fff;
     font-size: 16px;
