--- a/frontend/src/Components/Chanels/Chanels/Chanels.css
+++ b/frontend/src/Components/Chanels/Chanels/Chanels.css
@@ -35,8 +35,13 @@
 .channel .container-none {
     display: none
 }
-.loading {
-    color: #ccc;
+
+.loading-container{
+    display: flex;
+    justify-content: center;
+}
+.loading-img {
+    width: 50px;
 }
 .channel .messages .message {
     color: #fff;
