--- a/frontend/src/Components/Users/UserInfo/UserInfo.css
+++ b/frontend/src/Components/Users/UserInfo/UserInfo.css
@@ -20,8 +20,14 @@
     cursor: pointer;
     color: #fff;
 }
-.loading{
-    color: #B687BD;
+.loading-container{
+    display: flex;
+    justify-content: center;
+    width: 300px;
+}
+.loading-img {
+    width: 50px;
+    height: 50px;
 }
 .infoContainer .bioInfo {
     display: flex;
