--- a/frontend/src/Components/Chanels/ChanelsAside/ChanelsAside.css
+++ b/frontend/src/Components/Chanels/ChanelsAside/ChanelsAside.css
@@ -97,11 +97,11 @@
     .chanels-aside .channels{
         padding: 5px;
 }
-
+/*  
     .chanels-aside .members{
-        display: none;
+      display: none;
     }
-
+*/
     .close-button {
         display: flex;
         background: transparent;
